refactored uber for new method; moved in blog from great2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,7 @@ version = { attr = "quarto_tools.__version__" }
 
 [project.scripts]
 qt = "quarto_tools.cli:entry"
+
+# Magic discovery by uber routine
+[project.entry-points."uber.plugins"]
+qt = "quarto_tools.cli:entry"
